@@ -68,6 +68,8 @@ C-API
 Library
 -------
 
+- Issue #3629: Fix sre "bytecode" validator for an end case.
+
 - Issue #3811: The Unicode database was updated to 5.1.
 
 - Issue #3809: Fixed spurious 'test.blah' file left behind by test_logging.
